# CypryCPP

./: CMakeLists.txt  library.cpp  library.h
Documents/: TODO.md
LibCore/Application/: ApplicationAdapter.cpp  ApplicationAdapter.h  ApplicationConfiguration.cpp  ApplicationConfiguration.h  Engine.cpp  Engine.h  Game.h  GameTime.cpp  GameTime.h  IApplication.h  IApplicationListener.h  ILifecycleListener.h  IScreen.h  LibraryVersion.cpp  LibraryVersion.h  Platform.cpp  Platform.h  ScreenAdapter.h
LibCore/Assets/: AssetManager.cpp  AssetManager.h
LibCore/Assets/Loaders/Resolvers/: IFileHandleResolver.cpp  IFileHandleResolver.h
LibCore/Files/: PathTypes.cpp  PathTypes.h
LibCore/Graphics/: Color.cpp  Color.h  GraphicsBackend.cpp  GraphicsBackend.h  GraphicsDevice.cpp  GraphicsDevice.h  ICursor.cpp  ICursor.h  Pixmap.cpp  Pixmap.h
LibCore/Graphics/FrameBuffers/: FramebufferConfig.cpp  FramebufferConfig.h
LibCore/Graphics/OpenGL/: GlVersion.cpp  GlVersion.h  IGL.h
LibCore/Graphics/Utils/: HdpiUtils.cpp  HdpiUtils.h
LibCore/Maths/: MathUtils.cpp  MathUtils.h
LibCore/Utils/: IClipboard.h  IRunnable.h
LibCore/Utils/Collections/: ObjectMap.cpp  ObjectMap.h
LibCore/Utils/Logging/: IPreferences.h  Logger.cpp  Logger.h
